--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Bootstrap 101 Template</title>
+	<title>Nucleon Bytes</title>
 
 	<!-- Bootstrap -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,8 +29,8 @@
   					<span class="icon-bar"></span>
   				</button>
   				<a class="navbar-brand" href="#">
-  					<img style="max-width:100px; margin-top: -7px;"
-  					src="/img/Nucleon_Logo.png">
+  					<img style="max-width:95px; margin-top: -7px;"
+  					src="/img/Nucleon_Logo_CutOut.png">
   				</a>
   			</div>
 
