--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   					<span class="icon-bar"></span>
   				</button>
   				<a class="navbar-brand" href="#">
-  					<img style="max-width:40px; margin-top: -7px;"
-  					src="/img/Nucleon_Logo_CutOut.png">
+  					<img style="max-width:34px; margin-top: -7px;"
+  					src="/img/Nucleon_Logo.png">
   				</a>
   			</div>
 
