Home page Updated
Changed Visibility of text... More work required

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="navbar-brand" href="#"><img style="max-height:34px; margin-top:-7px;" src="img/Nucleon_Logo.png"></a>
+  				<a class="navbar-brand" href="#">
+  						<img style="max-height:34px; margin-top:-7px;" src="img/Nucleon_Logo_Landscape.png"/>
+  				</a>
   			</div>
   			<div class="navbar-collapse collapse">
   				<ul class="nav navbar-nav navbar-right">
@@ -64,14 +66,14 @@
   			<div class="row text-center g-pad-bottom">
   				<div class="col-md-12">
 
-  					<span class="head-main">NUCLEON BYTES</span>
+  					<span class="head-main Header_soft_shadow">NUCLEON BYTES</span>
   				</div>
   			</div>
   			<div class="row text-center">
   				<div class="col-md-4  col-sm-4">
   					<i class="fa fa-crop faa-pulse animated icon-round fr-color-white bk-color-black"></i>
-  					<h4>We Design for you</h4>
-  					<p>
+  					<h4 class="txt_soft_shadow">We Design for you</h4>
+  					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -80,8 +82,8 @@
   				</div>
   				<div class="col-md-4  col-sm-4">
   					<i class="fa fa-code  faa-pulse animated icon-round fr-color-white bk-color-black"></i>
-  					<h4>We Create for you</h4>
-  					<p>
+  					<h4 class="txt_soft_shadow">We Create for you</h4>
+  					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -90,8 +92,8 @@
   				</div>
   				<div class="col-md-4  col-sm-4">
   					<i class="fa fa-dashboard  faa-pulse animated icon-round fr-color-white bk-color-black"></i>
-  					<h4>We Maintain for you</h4>
-  					<p>
+  					<h4 class="txt_soft_shadow">We Maintain for you</h4>
+  					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -303,7 +305,7 @@
 
   	<section  id="contact-sec">
   		<div class="add">
-  			<i>e-Address: </i> NucleonBytes@gmail.com
+  			<i>Any questions? Let us know: </i> NucleonBytes@gmail.com
   		</div>
 
   	</section>
