--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
   					<span class="icon-bar"></span>
   					<span class="icon-bar"></span>
   				</button>
-  				<a class="navbar-brand" href="#">
-  						<img style="max-height:34px; margin-top:-7px;" src="img/Nucleon_Logo_Landscape.png"/>
+  				<a class="navbar-brand LogoInt" href="#">
+  						<img class="mainImg" style="position:absolute;max-height:34px; margin-top:-7px;" src="img/Nucleon_Logo.png"/>
+  						<img class="imooji" style="opacity:0; top:15px; max-height:34px; margin-top:-7px;" src="img/Nucleon_Text_Logo.png"/>
   				</a>
   			</div>
   			<div class="navbar-collapse collapse">
@@ -71,7 +72,7 @@
   			</div>
   			<div class="row text-center">
   				<div class="col-md-4  col-sm-4">
-  					<i class="fa fa-crop faa-pulse animated icon-round fr-color-white bk-color-black"></i>
+  					<i class="fa fa-crop icon-round fr-color-white bk-color-black"></i>
   					<h4 class="txt_soft_shadow">We Design for you</h4>
   					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -81,7 +82,7 @@
 
   				</div>
   				<div class="col-md-4  col-sm-4">
-  					<i class="fa fa-code  faa-pulse animated icon-round fr-color-white bk-color-black"></i>
+  					<i class="fa fa-code icon-round fr-color-white bk-color-black"></i>
   					<h4 class="txt_soft_shadow">We Create for you</h4>
   					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -91,7 +92,7 @@
 
   				</div>
   				<div class="col-md-4  col-sm-4">
-  					<i class="fa fa-dashboard  faa-pulse animated icon-round fr-color-white bk-color-black"></i>
+  					<i class="fa fa-dashboard icon-round fr-color-white bk-color-black"></i>
   					<h4 class="txt_soft_shadow">We Maintain for you</h4>
   					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -328,6 +329,6 @@
 
   	<!-- CUSTOM SCRIPTS -->
   	<script src="js/custom.js"></script>
-
+  	<script src="http://www.kirupa.com/js/prefixfree.min.js"></script>
   </body>
   </html>
