--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   			</div>
   			<div class="row text-center">
   				<div class="col-md-4  col-sm-4">
-  					<i class="fa fa-fax faa-ring animated icon-round bk-color-black"></i>
+  					<i class="fa fa-paper-plane faa-ring animated icon-round bk-color-blue"></i>
   					<h4>Website</h4>
   					<p>
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -147,7 +147,7 @@
 
   				</div>
   				<div class="col-md-4  col-sm-4">
-  					<i class="fa fa-bomb  faa-pulse animated icon-round bk-color-blue"></i>
+  					<i class="fa fa-mobile  faa-pulse animated icon-round bk-color-red"></i>
   					<h4>Mobile</h4>
   					<p>
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -157,7 +157,7 @@
 
   				</div>
   				<div class="col-md-4  col-sm-4">
-  					<i class="fa fa-paw  faa-bounce animated icon-round bk-color-brown"></i>
+  					<i class="fa fa-file-code-o  faa-bounce animated icon-round bk-color-brown"></i>
   					<h4>Source</h4>
   					<p>
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
