--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   					<span class="icon-bar"></span>
   				</button>
   				<a class="navbar-brand LogoInt" href="#">
-  						<img class="mainImg" style="position:absolute;max-height:34px; margin-top:-7px;" src="img/Nucleon_Logo.png"/>
+  						<img class="mainImg" style="position:absolute;max-height:34px; margin-top:-7px;" src="img/Nucleon_Logo_White.png"/>
   						<img class="imooji" style="opacity:0; top:15px; max-height:34px; margin-top:-7px;" src="img/Nucleon_Text_Logo.png"/>
   				</a>
   			</div>
