--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   					<li><a href="#home-sec">HOME</a></li>
   					<li><a href="#services-sec">SERVICES</a></li>
   					<li><a href="#price-sec">PRICING</a></li>
+  					<li><a href="#hosting-sec">HOSTING</a></li>
   					<li><a href="#contact-sec">CONTACT</a></li>
   				</ul>
   			</div>
@@ -300,6 +301,70 @@
   		</div>
   	</section>
   	<!-- END PRICE SECTION-->
+
+
+  	<!--HOSTING SECTION-->
+
+  	<section  id="hosting-sec" class="veil">
+  		<div class="container">
+  			<h3 style="text-align:center;color:white">We offer hosting too!</h3>
+  			<div class="row ">
+  				<div class="col-md-12 text-center ">
+  					<div class="col-md-4 col-sm-4">
+  						<ul class="plan">
+  							<li class="plan-head btn-primary">'STARTER' PLAN</li>
+
+  							<li><strong>1GB</strong> Storage</li>
+  							<li><strong>1GB</strong> Backup Storage</li>
+  							<li><strong>24hr</strong> Access</li>
+  							<li><strong>0</strong> SQL Database</li>
+
+  							<li class="main-price">From £15 per month</li>
+  							<li class="bottom">
+  								<a href="#" class="btn btn-danger btn-lg ">Read More</a>
+  							</li>
+  						</ul>
+  					</div>
+  					<div class="col-md-4  col-sm-4">
+  						<ul class="plan">
+  							<li class="plan-head btn-success">'PLUS' PLAN</li>
+
+  							<li><strong>5GB</strong> Storage</li>
+  							<li><strong>UNLIMITED</strong> Backup Storages</li>
+  							<li><strong>24hr</strong> Access</li>
+  							<li><strong>3</strong> SQL Databases</li>
+
+  							<li class="main-price">From £35 per month</li>
+  							<li class="bottom">
+  								<a href="#" class="btn btn-primary btn-lg ">Read More</a>
+  							</li>
+  						</ul>
+  					</div>
+  					<div class="col-md-4  col-sm-4">
+  						<ul class="plan">
+  							<li class="plan-head btn-danger">'MEGA' PLAN</li>
+
+  							<li><strong>500GB</strong> Flexible storage</li>
+  							<li><strong>UNLIMITED</strong> Backup Storages</li>
+  							<li><strong>24hr</strong> Access</li>
+  							<li><strong>UNLIMITED</strong> SQL Databases</li>
+
+  							<li class="main-price">From £50 per month</li>
+  							<li class="bottom">
+  								<a href="#" class="btn btn-success btn-lg">Read More</a>
+  							</li>
+  						</ul>
+  					</div>
+
+
+  				</div>
+  			</div>
+
+
+  		</div>
+
+  	</section>
+  	<!--END CONTACT SECTION-->
 
 
   	<!--CONTACT SECTION-->
