--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
   							<li><strong>FREE</strong> Wireframe designs</li>
   							<li><strong>12hr</strong> Support (after consultation)</li>
   							<li><strong>1</strong> Page</li>
+  							<li><strong>0</strong> ownership</li>
+  							<li><strong>UP TO 2</strong> custom designs</li>
 
   							<li class="main-price">£9.99 only</li>
   							<li class="bottom">
@@ -270,6 +272,8 @@
   							<li><strong>5 FREE</strong> Changes after confirmation</li>
   							<li><strong>48hr</strong> Support (after delivery)</li>
   							<li><strong>UP TO 3</strong> Pages</li>
+  							<li><strong>SHARED</strong> ownership of website</li>
+  							<li><strong>UP TO 10</strong> custom designs</li>
 
   							<li class="main-price">£35 only</li>
   							<li class="bottom">
@@ -285,6 +289,8 @@
   							<li><strong>UNLIMITED</strong> Changes after confirmation</li>
   							<li><strong>1 YEAR</strong> Support (after delivery)</li>
   							<li><strong>UNLIMITED</strong> Pages</li>
+  							<li><strong>FULL</strong> ownership of website</li>
+  							<li><strong>UNLIMITED</strong> custom designs</li>
 
   							<li class="main-price">From £45 per month</li>
   							<li class="bottom">
