--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
   					</div>
 
   					<div class="col-md-4 col-sm-4">
-  						<h2>Got a request?</h2>
+  						<h2>Custom Tools/Platforms?</h2>
   						<p>
-  							Lorem ipsum dolor sit amet, accumsan.  posuere lectus et, fringilla augue.
-  							Lorem ipsum dolor sit amet, accumsan.  posuere lectus et, fringilla augue.
+  							We also accept requests for websites to be made using online tools and platforms.
+                For more information about third-party tools, contact us NOW!
   						</p>
   					</div>
   				</div>
