--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   			<div class="row text-center">
   				<div class="col-md-4  col-sm-4">
   					<i class="fa fa-crop icon-round fr-color-white bk-color-black"></i>
-  					<h4 class="txt_soft_shadow">We Design for you</h4>
+  					<h4 class="txt_soft_shadow">We Design</h4>
   					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
@@ -84,7 +84,7 @@
   				</div>
   				<div class="col-md-4  col-sm-4">
   					<i class="fa fa-code icon-round fr-color-white bk-color-black"></i>
-  					<h4 class="txt_soft_shadow">We Create for you</h4>
+  					<h4 class="txt_soft_shadow">We Create</h4>
   					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
@@ -94,7 +94,7 @@
   				</div>
   				<div class="col-md-4  col-sm-4">
   					<i class="fa fa-dashboard icon-round fr-color-white bk-color-black"></i>
-  					<h4 class="txt_soft_shadow">We Maintain for you</h4>
+  					<h4 class="txt_soft_shadow">We Maintain</h4>
   					<p class="txt_soft_shadow">
   						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
   						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
