--- a/index.html
+++ b/index.html
@@ -118,11 +118,10 @@
   					<div class="col-md-8 col-sm-8">
   						<h2>What we do</h2>
   						<p>
-  							Lorem ipsum dolor sit amet, accumsan.  posuere lectus et, fringilla augue.
-  							Lorem ipsum dolor sit amet, accumsan.  posuere lectus et, fringilla augue.
-  							Lorem ipsum dolor sit amet, accumsan.  posuere lectus et, fringilla augue.
-  							Lorem ipsum dolor sit amet, accumsan.  posuere lectus et, fringilla augue.
-  							Lorem ipsum dolor sit amet, accumsan.  posuere lectus et, fringilla augue.
+  							We create affordable, manageable and purchasable front-end websites.
+                We design, plan and create your website from our own library of templates
+                which you can choose from. Tailor-made templates are also available for an
+                affordable price.
   						</p>
   					</div>
 
