--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
   					<i class="fa fa-paper-plane faa-ring animated icon-round bk-color-blue"></i>
   					<h4>Website</h4>
   					<p>
-  						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-  						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  						We have a range of prices and plans to suit your needs. Simply visit the PRICING 
+              section below to learn more.
   					</p>
 
   				</div>
@@ -150,9 +149,8 @@
   					<i class="fa fa-mobile  faa-pulse animated icon-round bk-color-red"></i>
   					<h4>Mobile</h4>
   					<p>
-  						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-  						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  						We create every website with a "mobile-first" approach, ensuring that it can be
+              read by your customers on mobile devices.
   					</p>
 
   				</div>
@@ -160,9 +158,9 @@
   					<i class="fa fa-file-code-o  faa-bounce animated icon-round bk-color-brown"></i>
   					<h4>Source</h4>
   					<p>
-  						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  						Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-  						Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  						With the "Jupiter" plan, you gain full ownership over your website. After 
+              your site goes live, we will send you the full source code, as well as any
+              graphic media created.
   					</p>
 
   				</div>
