--- a/NBLib/NB VarVar/index.html
+++ b/NBLib/NB VarVar/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>hi</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="varvar.js"></script>
+	<script src="varvar.js" type="text/javascript"></script>
 </head>
 <body>
 	<div class="NB-box"></div>
