--- a/NBLib/NB VarVar/index.html
+++ b/NBLib/NB VarVar/index.html
@@ -5,6 +5,6 @@
 	<script src="varvar.js" type="text/javascript"></script>
 </head>
 <body>
-	<div class="NB-box"></div>
+	<div id="NB-box">RAW</div>
 </body>
 </html>
