--- a/NBLib/NB VarVar/index.html
+++ b/NBLib/NB VarVar/index.html
@@ -5,6 +5,12 @@
 	<script src="varvar.js" type="text/javascript"></script>
 </head>
 <body>
-	<div class="NB-var">RAW</div>
+	<div class="NBV-box">RAW</div>
+	<div class="NBV-mv">RAW2</div>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			syncVar("mv");
+		});
+	</script>
 </body>
 </html>
