--- a/NBLib/NB VarVar/index.html
+++ b/NBLib/NB VarVar/index.html
@@ -5,11 +5,12 @@
 	<script src="varvar.js" type="text/javascript"></script>
 </head>
 <body>
-	<div class="NBV-box">RAW</div>
-	<div class="NBV-mv">RAW2</div>
+	<div class="NBV-box">This is a Div tag</div>
+	<p class="NBV-mv">This is a P tag</p>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			syncVar("mv");
+			syncVar("box");
 		});
 	</script>
 </body>
