--- a/previews/Basic3A/index.html
+++ b/previews/Basic3A/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Example 3A</title>
 	<link rel="stylesheet" href="css/styles.css">
-	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="http://nucleonbytes.github.io/NBLib/NB%20VarVar/varvar.js"></script>
 </head>
 <body>
 	<nav>
@@ -16,7 +17,7 @@
 		</ul>
 	</nav>
 	<section>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae ad, recusandae consectetur repellat. Aperiam, odit, illo. Tenetur quo, aperiam praesentium architecto temporibus! Perferendis odit repellat deleniti officiis perspiciatis impedit quod molestias doloribus, nesciunt ipsam temporibus asperiores est dolores laboriosam nisi, esse reiciendis maiores commodi possimus voluptatem. Veritatis magnam ullam explicabo dolores porro odio temporibus necessitatibus facere cupiditate eligendi quam, corrupti sit, ea sequi repellat totam quisquam, velit cumque saepe quia exercitationem expedita hic. Rem aperiam consequatur ratione quo dolor magnam ullam esse vero. Et commodi, ullam, dicta, quisquam animi, distinctio eum nesciunt ab omnis hic similique soluta error consequatur ipsam.</p>
+		<p class="NBV-loremContent"></p>
 		<br>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe unde iure beatae, possimus cumque. Deleniti nihil, perspiciatis facilis doloribus? Non minus tempora deleniti voluptatum, similique quas, repellendus, ex architecto mollitia facilis, laboriosam ut voluptatem? Ratione non provident corporis nisi officia commodi suscipit, pariatur fugiat? Quis maiores sunt laborum fuga cum eum deleniti impedit mollitia eos praesentium eaque nemo dicta delectus rem quo soluta eius, at velit placeat incidunt, voluptate recusandae iste. Magnam praesentium esse perspiciatis nulla at blanditiis odit. Incidunt qui quisquam itaque, aliquam? Enim accusamus rerum expedita, ipsa molestiae a officiis, earum eum reiciendis hic, eaque suscipit, impedit blanditiis.</p>
 		<br>
