--- a/previews/AngelaDennis/index.html
+++ b/previews/AngelaDennis/index.html
@@ -26,7 +26,7 @@
       <![endif]-->
 </head>
 <body>
-    <div class="lightbox"><img src="img/placeholder.jpg" class="lightboxdisplay"></img></div>
+    <div class="lightbox"><img src="img/videoPlaceholder.jpg" class="lightboxdisplay"></img></div>
 
 	<!-- NAV SECTION -->
        <div class="navbar navbar-inverse navbar-fixed-top">
@@ -82,66 +82,66 @@
                <h3 class="fr-color-black">Recent Work!</h3>
                <div class="row ">
                    <div class="col-xs-6 col-md-3">
-                       <a  id ="lbtrigger" data-toggle="tooltip" data-placement="top" title="image" href="#!" class="thumbnail">
+                       <a  id ="lbtrigger" data-toggle="tooltip" data-placement="top" title="image"  class="thumbnail">
                            <img src="img/placeholder.jpg" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a  id ="lbtrigger" data-toggle="tooltip" data-placement="top" title="image"  href="#!" class="thumbnail">
+                       <a  id ="lbtrigger" data-toggle="tooltip" data-placement="top" title="image"   class="thumbnail">
                            <img src="img/placeholder.jpg" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="top" title="video" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="top" title="video example"  class="thumbnail">
                            <img src="img/videoPlaceholder.jpg" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="top" title="image" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="top" title="image" class="thumbnail">
                            <img src="img/placeholder.jpg" alt="..."/>
                        </a>
                    </div>
                </div>
                <div class="row ">
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image"  class="thumbnail">
                            <img src="img/placeholder.png" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="video" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="video example"  class="thumbnail">
                            <img src="img/videoPlaceholder.jpg" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image"  class="thumbnail">
                            <img src="img/placeholder.png" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" class="thumbnail">
                            <img src="img/placeholder.png" alt="..."/>
                        </a>
                    </div>
                </div>
                <div class="row ">
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" class="thumbnail">
                            <img src="img/placeholder.jpg" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="video" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="video example" class="thumbnail">
                            <img src="img/videoPlaceholder.jpg" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" class="thumbnail">
                            <img src="img/placeholder.jpg" alt="..."/>
                        </a>
                    </div>
                    <div class="col-xs-6 col-md-3">
-                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" href="#!" class="thumbnail">
+                       <a id ="lbtrigger" data-toggle="tooltip" data-placement="bottom" title="image" class="thumbnail">
                            <img src="img/placeholder.png" alt="..."/>
                        </a>
                    </div>
@@ -154,10 +154,10 @@
 
         <section  id="portfolio-sec" class="veil">
             <div class="container">
-                <h3 style="text-align:center;color:black">Check it</h3>
-                <div class="row ">
-                    <div class="col-md-12 text-center ">
-                        x
+                <h3 style="text-align:center;color:black">Interested?</h3>
+								<div class="row text-center">
+                    <div class="col-md-12">
+                        <button class="btn">BOOK ME</button>
                     </div>
                 </div>
             </div>
@@ -180,7 +180,9 @@
            <!--END STATS SECTION-->
 
 
-        <script src="../../plugins/jquery-1.10.2.js"></script>
+					 <script src="../../plugins/jquery-1.10.2.js"></script>
+      <!--  <script src="js/jquery-1.6.1.min.js"></script>-->
+
         <!-- BOOTSTRAP CORE SCRIPT   -->
         <script src="../../plugins/bootstrap.js"></script>
 
