--- a/previews/AngelaDennis/index.html
+++ b/previews/AngelaDennis/index.html
@@ -38,7 +38,7 @@
                        <span class="icon-bar"></span>
                    </button>
                    <a class="navbar-brand" href="#">
-                       Angela Dennise
+                       Angela Dennis
                    </a>
                </div>
                <div class="navbar-collapse collapse">
