--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link href="css/style.css" rel="stylesheet" />
         <!-- GOOGLE FONT -->
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -51,9 +52,8 @@
        <li><a href="#home-sec">HOME</a></li>
        <li><a href="#services-sec">SERVICES</a></li>
        <li><a href="#price-sec">PRICING</a></li>
-       <li><a href="#hosting-sec">HOSTING</a></li>
+       <li><a onClick="showContactUs()">CONTACT</a></li>
        <li><a href="#preview-sec">PREVIEWS</a></li>
-       <li><a href="#contact-sec">CONTACT</a></li>
      </ul>
    </div>
 
@@ -76,31 +76,19 @@
   <div class="col-md-4  col-sm-4">
    <i class="fa fa-crop icon-round fr-color-white bk-color-black"></i>
    <h4 class="txt_soft_shadow">We Design</h4>
-   <p class="txt_soft_shadow">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-    Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  </p>
+  
 
 </div>
 <div class="col-md-4  col-sm-4">
  <i class="fa fa-code icon-round fr-color-white bk-color-black"></i>
  <h4 class="txt_soft_shadow">We Create</h4>
- <p class="txt_soft_shadow">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-</p>
+ 
 
 </div>
 <div class="col-md-4  col-sm-4">
  <i class="fa fa-dashboard icon-round fr-color-white bk-color-black"></i>
  <h4 class="txt_soft_shadow">We Maintain</h4>
- <p class="txt_soft_shadow">
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-  Curabitur nec nisl odio. Mauris vehicula at nunc id posuere.
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-</p>
+
 
 </div>
 </div>
@@ -109,6 +97,104 @@
 </div>
 
 <!--END HOME SECTION-->
+
+<!--PRICE SECTION-->
+<section id="price-sec">
+  <div class="container">
+   <div class="row ">
+    <div class="col-md-12 text-center ">
+     <div class="col-md-4 col-sm-4">
+      <ul class="plan">
+       <li class="plan-head btn-danger">'BASIC'</li>
+
+       <li><strong>FREE</strong> Design Consultation</li>
+       <li><strong>UP TO 2</strong> Pages</li>
+       <li><strong>12hr</strong> Support (after delivery)</li>
+       <li><strong>NO</strong> ownership</li>
+       <li><strong>0</strong> custom designs to choose from</li>
+       <li><strong>3</strong> templates to choose from</li>
+       <li><strong>0</strong> included assets</li>
+       <li><strong>0</strong> databases</li>
+
+       <li class="main-price">From £12.99</li>
+       <li class="bottom">
+        <a href="#" class="btn btn-danger btn-lg ">Read More</a>
+      </li>
+    </ul>
+  </div>
+  <div class="col-md-4  col-sm-4">
+    <ul class="plan">
+     <li class="plan-head btn-primary">'EXTRA'</li>
+
+     <li><strong>FREE</strong> Design Consultation</li>
+     <li><strong>UP TO 5</strong> Pages</li>
+     <li><strong>48hr</strong> Support (after delivery)</li>
+     <li><strong>SHARED</strong> ownership of website</li>
+     <li><strong>3</strong> custom designs to choose from</li>
+     <li><strong>6</strong> templates to choose from</li>
+     <li><strong>3</strong> included assets</li>
+     <li><strong>1</strong> database</li>
+
+     <li class="main-price">From £56</li>
+     <li class="bottom">
+      <a href="#" class="btn btn-primary btn-lg ">Read More</a>
+    </li>
+  </ul>
+</div>
+<div class="col-md-4  col-sm-4">
+  <ul class="plan">
+   <li class="plan-head btn-success">'PRO'</li>
+
+   <li><strong>FREE</strong> Design Consultation</li>
+   <li><strong>UP TO 12</strong> Pages</li>
+   <li><strong>1 YEAR</strong> Support (after delivery)</li>
+   <li><strong>FULL</strong> ownership of website</li>
+   <li><strong>8</strong> custom designs to choose from</li>
+   <li><strong>12</strong> Templates to choose from</li>
+   <li><strong>UNLIMITED</strong> included assets</li>
+   <li><strong>UP TO 5</strong> databases</li>
+
+   <li class="main-price">From £250</li>
+   <li class="bottom">
+    <a href="#" class="btn btn-success btn-lg">Read More</a>
+  </li>
+</ul>
+</div>
+
+
+</div>
+</div>
+
+
+</div>
+</section>
+<!-- END PRICE SECTION-->
+
+
+<!--STATS SECTION-->
+<section class="c-sts" id="sts-img">
+  <div class="container">
+   <div class="row ">
+    <div class="col-md-9 ">
+     <div class="stats-div">
+      <h3>Contact us</h3>
+      <h4>Now!</h4>
+    </div>
+  </div>
+
+  <div class="col-md-3 ">
+   <div class="stats-div">
+    <h3></h3>
+    <h4>For your free quote!!</h4>
+  </div>
+
+</div>
+
+
+</div>
+</div>
+</section>
+<!--END STATS SECTION-->
 
 <!--SERVICES SECTION-->
 <section  id="services-sec" >
@@ -214,165 +300,11 @@
 </div>
 </section>
 <!--END SERVICES SECTION-->
-<!--STATS SECTION-->
-<section class="c-sts" id="sts-img">
-  <div class="container">
-   <div class="row ">
-    <div class="col-md-9 ">
-     <div class="stats-div">
-      <h3>Contact us now!</h3>
-      <h4>And get a free quote today..</h4>
-    </div>
-  </div>
 
-
-  <div class="col-md-3 ">
-   <div class="stats-div">
-    <h3>99%</h3>
-    <h4>Acceptance rate</h4>
-  </div>
-
-</div>
-
-
-</div>
-</div>
-</section>
-<!--END STATS SECTION-->
-
-<!--PRICE SECTION-->
-<section id="price-sec">
-  <div class="container">
-   <div class="row ">
-    <div class="col-md-12 text-center ">
-     <div class="col-md-4 col-sm-4">
-      <ul class="plan">
-       <li class="plan-head btn-danger">'MARS' PLAN</li>
-
-       <li><strong>FREE</strong> Consultation</li>
-       <li><strong>FREE</strong> Wireframe designs</li>
-       <li><strong>12hr</strong> Support (after consultation)</li>
-       <li><strong>1</strong> Page</li>
-       <li><strong>0</strong> ownership</li>
-       <li><strong>UP TO 2</strong> custom designs</li>
-
-       <li class="main-price">£9.99 only</li>
-       <li class="bottom">
-        <a href="#" class="btn btn-danger btn-lg ">Read More</a>
-      </li>
-    </ul>
-  </div>
-  <div class="col-md-4  col-sm-4">
-    <ul class="plan">
-     <li class="plan-head btn-primary">'NEPTUNE' PLAN</li>
-
-     <li><strong>FREE</strong> Design Consultation</li>
-     <li><strong>5 FREE</strong> Changes after confirmation</li>
-     <li><strong>48hr</strong> Support (after delivery)</li>
-     <li><strong>UP TO 3</strong> Pages</li>
-     <li><strong>SHARED</strong> ownership of website</li>
-     <li><strong>UP TO 10</strong> custom designs</li>
-
-     <li class="main-price">£35 only</li>
-     <li class="bottom">
-      <a href="#" class="btn btn-primary btn-lg ">Read More</a>
-    </li>
-  </ul>
-</div>
-<div class="col-md-4  col-sm-4">
-  <ul class="plan">
-   <li class="plan-head btn-success">'JUPITER' PLAN</li>
-
-   <li><strong>FREE</strong> Design Consultation</li>
-   <li><strong>UNLIMITED</strong> Changes after confirmation</li>
-   <li><strong>1 YEAR</strong> Support (after delivery)</li>
-   <li><strong>UNLIMITED</strong> Pages</li>
-   <li><strong>FULL</strong> ownership of website</li>
-   <li><strong>UNLIMITED</strong> custom designs</li>
-
-   <li class="main-price">From £45 per month</li>
-   <li class="bottom">
-    <a href="#" class="btn btn-success btn-lg">Read More</a>
-  </li>
-</ul>
-</div>
-
-
-</div>
-</div>
-
-
-</div>
-</section>
-<!-- END PRICE SECTION-->
-
-
-<!--HOSTING SECTION-->
-
-<section  id="hosting-sec" class="veil">
-  <div class="container">
-   <h3 style="text-align:center;color:white">We offer hosting too!</h3>
-   <div class="row ">
-    <div class="col-md-12 text-center ">
-     <div class="col-md-4 col-sm-4">
-      <ul class="plan">
-       <li class="plan-head btn-primary">'STARTER' PLAN</li>
-
-       <li><strong>1GB</strong> Storage</li>
-       <li><strong>1GB</strong> Backup Storage</li>
-       <li><strong>24hr</strong> Access</li>
-       <li><strong>0</strong> SQL Database</li>
-
-       <li class="main-price">From £15 per month</li>
-       <li class="bottom">
-        <a href="#" class="btn btn-danger btn-lg ">Read More</a>
-      </li>
-    </ul>
-  </div>
-  <div class="col-md-4  col-sm-4">
-    <ul class="plan">
-     <li class="plan-head btn-success">'PLUS' PLAN</li>
-
-     <li><strong>5GB</strong> Storage</li>
-     <li><strong>UNLIMITED</strong> Backup Storages</li>
-     <li><strong>24hr</strong> Access</li>
-     <li><strong>3</strong> SQL Databases</li>
-
-     <li class="main-price">From £35 per month</li>
-     <li class="bottom">
-      <a href="#" class="btn btn-primary btn-lg ">Read More</a>
-    </li>
-  </ul>
-</div>
-<div class="col-md-4  col-sm-4">
-  <ul class="plan">
-   <li class="plan-head btn-danger">'MEGA' PLAN</li>
-
-   <li><strong>500GB</strong> Flexible storage</li>
-   <li><strong>UNLIMITED</strong> Backup Storages</li>
-   <li><strong>24hr</strong> Access</li>
-   <li><strong>UNLIMITED</strong> SQL Databases</li>
-
-   <li class="main-price">From £50 per month</li>
-   <li class="bottom">
-    <a href="#" class="btn btn-success btn-lg">Read More</a>
-  </li>
-</ul>
-</div>
-
-
-</div>
-</div>
-
-
-</div>
-
-</section>
-<!--END CONTACT SECTION-->
 
 <!--PREVIEWS SECTION-->
 
-<section  id="preview-sec">
+<section  id="preview-sec" style="background:gray">
   <div class="row">
     <div class="col-md-12 text-center">
       <h4> If you have been given preview codes, please enter it below to see a live version of your product in development</h4>
@@ -403,15 +335,10 @@
 
 <!--CONTACT SECTION-->
 
-<section  id="contact-sec">
-  <div class="add">
-   <i>Any questions? Let us know: </i> NucleonBytes@gmail.com
- </div>
-
-</section>
+<div id="hiddencontent" class="hid">
+   <i class="material-icons">contact_phone</i> Contact us now! <a href="mailto:nucleonbytes@gmail.com">NucleonBytes@gmail.com</a>
+</div>
 <!--END CONTACT SECTION-->
-
-
 
 <!--FOOTER SECTION -->
 <div id="footer">
