--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="col-md-12 text-center ">
      <div class="col-md-4 col-sm-4">
       <ul class="plan">
-       <li class="plan-head btn-danger">'BASIC'</li>
+       <li class="plan-head btn-primary">'BASIC'</li>
 
        <li><strong>FREE</strong> Design Consultation</li>
        <li><strong>UP TO 2</strong> Pages</li>
@@ -143,7 +143,7 @@
 </div>
 <div class="col-md-4  col-sm-4">
   <ul class="plan">
-   <li class="plan-head btn-success">'PRO'</li>
+   <li class="plan-head btn-primary">'PRO'</li>
 
    <li><strong>FREE</strong> Design Consultation</li>
    <li><strong>UP TO 12</strong> Pages</li>
