--- a/previews/XADE001/index.html
+++ b/previews/XADE001/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Blacticulate</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
@@ -10,14 +11,46 @@
     <nav>
        <img class="branding sinkIn-bg" src="assets/Blacticulate_logo_1.png" alt="banner">
         <ul>
-            <li><a class="sinkIn-fg" href="#">item1</a></li>
-            <li><a class="sinkIn-fg" href="#">item2</a></li>
-            <li><a class="sinkIn-fg" href="#">item3</a></li>
-            <li><a class="sinkIn-fg" href="#">item4</a></li>
+            <li><a class="sinkIn-fg" href="#">ITEM1</a></li>
+            <li><a class="sinkIn-fg" href="#">ITEM2</a></li>
+            <li><a class="sinkIn-fg" href="#">ITEM3</a></li>
+            <li><a class="sinkIn-fg" href="#">GET IN TOUCH</a></li>
         </ul>
     </nav>
-    <div class="minibox">
-        <img src="" alt="">
-    </div>
+        <section class="pagearea">
+            <div class="hero">
+                <img src="assets/Andy-Akinwolere.jpg" alt="">
+                <h1>EPISODE 5 W/ ANDY AKINWOLERE</h1>
+           </div>
+           <div class="minibox-car">
+               <div class="minibox">
+                    <img src="assets/TheVoicePress.jpg" alt="">
+                    This is an exampleThis is an exampleThis is an exampleThis is an example
+               </div>
+                <div class="minibox">
+                    <img src="assets/Andy-Akinwolere.jpg" alt="">
+                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                </div>
+                <div class="minibox">
+                    <img src="assets/Google-London-Lede.jpg" alt="">
+                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                </div>
+                <div class="minibox">
+                    <img src="assets/Andy-Akinwolere.jpg" alt="">
+                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                </div>
+                <div class="minibox">
+                    <img src="assets/Andy-Akinwolere.jpg" alt="">
+                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                </div>
+                <div class="minibox">
+                    <img src="assets/Andy-Akinwolere.jpg" alt="">
+                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                </div>
+            </div>            
+        </section>
+    <footer>
+        COPYRIGHT © 2015 BLACTICULATE
+    </footer>
 </body>
 </html>
