--- a/previews/XADE001/index.html
+++ b/previews/XADE001/index.html
@@ -5,6 +5,7 @@
     <title>Blacticulate</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="minibox.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -22,32 +23,57 @@
                 <img src="assets/Andy-Akinwolere.jpg" alt="">
                 <h1>EPISODE 5 W/ ANDY AKINWOLERE</h1>
            </div>
-           <div class="minibox-car">
-               <div class="minibox">
-                    <img src="assets/TheVoicePress.jpg" alt="">
-                    This is an exampleThis is an exampleThis is an exampleThis is an example
-               </div>
-                <div class="minibox">
-                    <img src="assets/Andy-Akinwolere.jpg" alt="">
-                    This is an exampleThis is an exampleThis is an exampleThis is an example
+            <h1 class="sub">LATEST WORK</h1>
+            <div class="minibox-car">
+                <div class="minibox-container">
+                    <div class="minibox">
+                        <img src="assets/TheVoicePress.jpg" alt="">
+                        This is an exampleThis is an exampleThis is an exampleThis is an example
+                    </div>
                 </div>
-                <div class="minibox">
-                    <img src="assets/Google-London-Lede.jpg" alt="">
-                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                <div class="minibox-container">
+                    <div class="minibox">
+                        <img src="assets/TheVoicePress.jpg" alt="">
+                        This is an exampleThis is an exampleThis is an exampleThis is an example
+                    </div>
                 </div>
-                <div class="minibox">
-                    <img src="assets/Andy-Akinwolere.jpg" alt="">
-                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                <div class="minibox-container">
+                    <div class="minibox">
+                        <img src="assets/TheVoicePress.jpg" alt="">
+                        This is an exampleThis is an exampleThis is an exampleThis is an example
+                    </div>
                 </div>
-                <div class="minibox">
-                    <img src="assets/Andy-Akinwolere.jpg" alt="">
-                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                <div class="minibox-container">
+                    <div class="minibox">
+                        <img src="assets/TheVoicePress.jpg" alt="">
+                        This is an exampleThis is an exampleThis is an exampleThis is an example
+                    </div>
                 </div>
-                <div class="minibox">
-                    <img src="assets/Andy-Akinwolere.jpg" alt="">
-                    This is an exampleThis is an exampleThis is an exampleThis is an example
+                <div class="minibox-container">
+                    <div class="minibox">
+                        <img src="assets/TheVoicePress.jpg" alt="">
+                        This is an exampleThis is an exampleThis is an exampleThis is an example
+                    </div>
                 </div>
-            </div>            
+                <div class="minibox-container">
+                    <div class="minibox">
+                        <img src="assets/TheVoicePress.jpg" alt="">
+                        This is an exampleThis is an exampleThis is an exampleThis is an example
+                    </div>
+                </div>
+                <div class="minibox-container">
+                    <div class="minibox">
+                        <img src="assets/TheVoicePress.jpg" alt="">
+                        This is an exampleThis is an exampleThis is an exampleThis is an example
+                    </div>
+                </div>
+                <div class="minibox-container">
+                    <div class="minibox">
+                        <img src="assets/TheVoicePress.jpg" alt="">
+                        This is an exampleThis is an exampleThis is an exampleThis is an example
+                    </div>
+                </div></div>    
+            <h1 class="sub">JOIN US</h1>  
         </section>
     <footer>
         COPYRIGHT © 2015 BLACTICULATE
