--- a/previews/XADE002/index.html
+++ b/previews/XADE002/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Blackticulate</title>
+	<title>Blacticulate</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/minibox.css">
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="css/fluidContainer.css">
 	<link rel="stylesheet" href="css/mirrors.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 <body>
 	<nav>
@@ -23,7 +24,7 @@
 			<li><a href="#"><i class="material-icons">phone_in_talk</i></a></li>
 		</ul>
 		<ul class="left">
-			<li><a href="#"><i class="material-icons">menu</i></a></li>
+			<li><a href="javascript:void(0);" onclick="$('.mirror').toggleClass('show');"><i class="material-icons">menu</i></a></li>
 		</ul>
 	</nav>
 	<div class="minimenu">
@@ -35,7 +36,55 @@
 			<li><a href="#">GET IN TOUCH</a></li>
 		</ul>
 	</div>
+	<div class="mirror">
+		<img src="img/Andy-Akinwolere.jpg" alt="">
+		<ul>
+			<li><a href="#">LATEST</a></li>
+			<li><a href="#">PODCAST</a></li>
+			<li><a href="#">ABOUT</a></li>
+			<li><a href="#">PRESS</a></li>
+			<li><a href="#">GET IN TOUCH</a></li>
+		</ul>
+	</div>
 	<section class="maincontent">
+		<div class="hero">
+			<img src="img/Andy-Akinwolere.jpg" alt="">
+			<h1>EPISODE 5 W/ ANDY AKINWOLERE</h1>
+		</div>
+		<h1>LATEST</h1>
+		<div class="minicontainer">
+			<div class="minibox">
+				<div class="image">
+					<img src="img/BlackHair.jpg" alt="">
+					<p>BLACTICULATE ON BLACK HAIR WEBSITE</p>
+				</div>
+			</div>
+			<div class="minibox">				
+				<div class="image">
+					<img src="img/SugarPlum.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/TheVoicePress.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/Marks-Spencer.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/Marks-Spencer.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+		</div>
+		<h1>JOIN US</h1>
 		<div class="container">
 			<div class="container50 stick-left img-fix">
 				<img src="img/siteicon.jpg" alt="">
@@ -50,8 +99,62 @@
 				</div>
 			</div>
 		</div>
-		
+		<h1>MORE</h1>
+		<div class="minicontainer freeform">
+			<div class="minibox">
+				<div class="image">
+					<img src="img/BlackHair.jpg" alt="">
+					<p>BLACTICULATE ON BLACK HAIR WEBSITE</p>
+				</div>
+			</div>
+			<div class="minibox">				
+				<div class="image">
+					<img src="img/SugarPlum.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/TheVoicePress.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/Marks-Spencer.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/Marks-Spencer.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/TheVoicePress.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/Marks-Spencer.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+			<div class="minibox">
+				<div class="image">
+					<img src="img/Marks-Spencer.jpg" alt="">
+					<p>about this proj</p>
+				</div>
+			</div>
+		</div>
+		<br>
+		<br>
 	</section>
-	
+	<footer>
+		<p>COPYRIGHT © 2015 BLACTICULATE</p>
+	</footer>
 </body>
 </html>
