--- a/previews/XADE002/index.html
+++ b/previews/XADE002/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/mirrors.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 </head>
 <body>
 	<nav>
@@ -38,7 +39,7 @@
 	</div>
 	<div class="mirror">
 		<img src="img/Andy-Akinwolere.jpg" alt="">
-		<ul>
+		<ul class="spread">
 			<li><a href="#">LATEST</a></li>
 			<li><a href="#">PODCAST</a></li>
 			<li><a href="#">ABOUT</a></li>
@@ -51,7 +52,7 @@
 			<img src="img/Andy-Akinwolere.jpg" alt="">
 			<h1>EPISODE 5 W/ ANDY AKINWOLERE</h1>
 		</div>
-		<h1>LATEST</h1>
+		<h1 class="headsep">LATEST</h1>
 		<div class="minicontainer">
 			<div class="minibox">
 				<div class="image">
@@ -62,29 +63,29 @@
 			<div class="minibox">				
 				<div class="image">
 					<img src="img/SugarPlum.jpg" alt="">
-					<p>about this proj</p>
+					<p>SUGAR PLUM</p>
 				</div>
 			</div>
 			<div class="minibox">
 				<div class="image">
 					<img src="img/TheVoicePress.jpg" alt="">
-					<p>about this proj</p>
+					<p>THE VOICE PRESS</p>
 				</div>
 			</div>
 			<div class="minibox">
 				<div class="image">
 					<img src="img/Marks-Spencer.jpg" alt="">
-					<p>about this proj</p>
+					<p>MARKS AND SPENCERS</p>
 				</div>
 			</div>
 			<div class="minibox">
 				<div class="image">
 					<img src="img/Marks-Spencer.jpg" alt="">
-					<p>about this proj</p>
+					<p>MARKS AND SPENCERS</p>
 				</div>
 			</div>
 		</div>
-		<h1>JOIN US</h1>
+		<h1 class="headsep">JOIN US</h1>
 		<div class="container">
 			<div class="container50 stick-left img-fix">
 				<img src="img/siteicon.jpg" alt="">
@@ -99,7 +100,7 @@
 				</div>
 			</div>
 		</div>
-		<h1>MORE</h1>
+		<h1 class="headsep">MORE</h1>
 		<div class="minicontainer freeform">
 			<div class="minibox">
 				<div class="image">
