--- a/dev/kodeblok/sample.html
+++ b/dev/kodeblok/sample.html
@@ -10,7 +10,7 @@
 <body>
 	<h1><kb.header></h1>
 	<ul>
-		<li>Fast page loads</li>
+		<li>it has Fast page loads</li>
 		<li>Smaller HTML file</li>
 		<li>Easy to use</li>
 		<li>Easy to emplement</li>
