--- a/dev/kodeblok/sample.html
+++ b/dev/kodeblok/sample.html
@@ -11,7 +11,7 @@
 	<h1><kb.header></h1>
 	<ul>
 		<li>it has Fast page loads</li>
-		<li>Smaller HTML file</li>
+		<li>Smaller HTML9 file</li>
 		<li>Easy to use</li>
 		<li>Easy to emplement</li>
 		<li>No need for installation</li>
